# basic-cuda

./: CMakeLists.txt  LICENSE  README.md  codegen.sh
include/automy/basic_cuda/: CUDA.h  CUDA_Bridge.h  CUDA_Image.h  CUDA_Image.hpp  CUDA_Image16.hpp  CUDA_Image8.hpp  CUDA_ImageF16.hpp  CUDA_ImageF32.hpp  CUDA_Matrix.h  CUDA_Texture.h  CUDA_device.h
interface/: CUDA_ImageFrame16.vni  CUDA_ImageFrame8.vni  CUDA_ImageFrameF16.vni  CUDA_ImageFrameF32.vni  package.vni
modules/: CUDA_Bridge.vni
src/: CUDA_Bridge.cpp  CUDA_Image16.cpp  CUDA_Image8.cpp  CUDA_ImageF16.cpp  CUDA_ImageF32.cpp
